--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,99 @@
-
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  width: 100%;
+  height: 100vh;
+  padding: 10px;
+  background: linear-gradient(to bottom, #68eacc 0%, #497be8 100%);
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+}
+.main_div {
+  width: 60%;
+  height: 70%;
+  margin: auto;
+  margin-top: 20px;
+  border: 0px dotted white;
+  background-color: white;
+  padding: 20px 20px;
+  font-size: 14px;
+  border-radius: 30px;
+  box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.1);
+}
+.main_div h1 {
+  font-size: 40px;
+  margin-top: 20px;
+  margin-left: 3%;
+}
+.main_div .form {
+  display: flex;
+  justify-content: space-around;
+  margin: auto;
+}
+.main_div #write_new {
+  margin: 20px 0;
+  width: 70%;
+  height: 45px;
+  text-align: center;
+  border-radius: 5px;
+  box-shadow: 0px 10px 15px rgba(202, 190, 190, 0.1);
+  margin-right: 6%;
+  /* border: rgb(179, 169, 169); */
+  outline: none;
+}
+.main_div #btn_Add {
+  padding: 6px 10px;
+  border-radius: 3px;
+  border: none;
+  outline: none;
+  color: #fff;
+  font-size: 16px;
+  background: #8e49e8;
+  /* user-select: none; */
+  margin: 20px 0;
+  width: 10%;
+  height: 45px;
+  text-align: center;
+}
+.foo {
+  display: flex;
+  justify-content: space-around;
+  margin: auto;
+  font-size: 18px;
+}
+.foo #p {
+  margin: 20px 0;
+  width: 50%;
+  height: 45px;
+  text-align: center;
+  margin-right: 31%;
+  padding-right: 3%;
+  padding-top: 1%;
+}
+.foo #clear {
+  padding: 6px 10px;
+  border-radius: 3px;
+  border: none;
+  outline: none;
+  color: #fff;
+  font-size: 16px;
+  background: #8e49e8;
+  font-size: 19px;
+  margin: 20px 0;
+  width: 18%;
+  height: 45px;
+  text-align: center;
+  margin-right: 3%;
+}
+/* .main_div #list {
+  width: 71%;
+  height: 45px;
+  text-align: center;
+  border-radius: 5px;
+  box-shadow: 0px 10px 15px rgba(202, 190, 190, 0.1);
+  background-color: #80808045;
+  margin: auto;
+  margin-right: 26%;
+} */
