--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
 .main_div {
-  width: 60%;
+  width: 100%;
   height: 70%;
   margin: auto;
   margin-top: 20px;
@@ -23,7 +23,7 @@ body {
   box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.1);
 }
 .main_div h1 {
-  font-size: 40px;
+  font-size: 2rem;
   margin-top: 20px;
   margin-left: 3%;
 }
@@ -59,7 +59,6 @@ body {
   display: flex;
   justify-content: space-around;
   margin: auto;
-  font-size: 18px;
 }
 .foo #p {
   margin: 20px 0;
@@ -67,8 +66,9 @@ body {
   height: 45px;
   text-align: center;
   margin-right: 31%;
-  padding-right: 3%;
+  padding-right: 21%;
   padding-top: 1%;
+  font-size: 1em;
 }
 .foo #clear {
   padding: 6px 10px;
@@ -76,11 +76,10 @@ body {
   border: none;
   outline: none;
   color: #fff;
-  font-size: 16px;
   background: #8e49e8;
-  font-size: 19px;
+  font-size: 1em;
   margin: 20px 0;
-  width: 18%;
+  width: 26%;
   height: 45px;
   text-align: center;
   margin-right: 3%;
